{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 579,
  "lineage": "f2a287ce-11ab-f816-074b-2a67219fa253",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:842517499452:vpc/vpc-055bde6d12ab44c52",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-093a293024dfe74d2",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-048ba624833e445cc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-055bde6d12ab44c52",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0521e91722f62c740",
            "owner_id": "842517499452",
            "region": "ap-south-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf_test_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:842517499452:internet-gateway/igw-0863984a2ccfa6adf",
            "id": "igw-0863984a2ccfa6adf",
            "owner_id": "842517499452",
            "region": "ap-south-1",
            "tags": {
              "Name": "Terraform Test Internet Gateway"
            },
            "tags_all": {
              "Name": "Terraform Test Internet Gateway"
            },
            "vpc_id": "vpc-03e18b90bf12adf87"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:842517499452:route-table/rtb-0fdd0d01e2752241d",
            "id": "rtb-0fdd0d01e2752241d",
            "owner_id": "842517499452",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0863984a2ccfa6adf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform Test Route"
            },
            "tags_all": {
              "Name": "Terraform Test Route"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e18b90bf12adf87"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "842517499452",
            "id": "rtb-0fdd0d01e2752241d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.tf_test_igw",
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5fd487e00c3edfa",
            "region": "ap-south-1",
            "route_table_id": "rtb-0fdd0d01e2752241d",
            "subnet_id": "subnet-0d145ef07e15cb0a5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.tf_test_igw",
            "module.route_table.aws_route_table.public_rt",
            "module.subnet.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a574594d846b094f",
            "region": "ap-south-1",
            "route_table_id": "rtb-0fdd0d01e2752241d",
            "subnet_id": "subnet-0186da84f48ba4ee8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.tf_test_igw",
            "module.route_table.aws_route_table.public_rt",
            "module.subnet.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_mysql_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:842517499452:security-group/sg-0577e2322ebefe63a",
            "description": "Allow access to RDS from EC2 present in public subnet",
            "egress": [],
            "id": "sg-0577e2322ebefe63a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0547bf6cad553301b"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "842517499452",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03e18b90bf12adf87"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "842517499452",
            "id": "sg-0577e2322ebefe63a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_allow_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:842517499452:security-group/sg-079c2f48a155b5cb8",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-079c2f48a155b5cb8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Terraform Test SG for Port 8080",
            "name_prefix": "",
            "owner_id": "842517499452",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Terraform Test SG"
            },
            "tags_all": {
              "Name": "Terraform Test SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e18b90bf12adf87"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "842517499452",
            "id": "sg-079c2f48a155b5cb8",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_allow_ssh_http_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:842517499452:security-group/sg-0547bf6cad553301b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0547bf6cad553301b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Terraform Test SG for Port 80, 443 and 22",
            "name_prefix": "",
            "owner_id": "842517499452",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Terraform Test SG"
            },
            "tags_all": {
              "Name": "Terraform Test SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e18b90bf12adf87"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "842517499452",
            "id": "sg-0547bf6cad553301b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_egress_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:842517499452:security-group-rule/sgr-04e93294867efc60e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-04e93294867efc60e",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0547bf6cad553301b",
            "security_group_rule_id": "sgr-04e93294867efc60e",
            "tags": {
              "Name": "Terraform Egress Rule"
            },
            "tags_all": {
              "Name": "Terraform Egress Rule"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "842517499452",
            "id": "sgr-04e93294867efc60e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.sg_allow_ssh_http_https",
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_8080_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:842517499452:security-group-rule/sgr-097f6e8a16486bd02",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-097f6e8a16486bd02",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-079c2f48a155b5cb8",
            "security_group_rule_id": "sgr-097f6e8a16486bd02",
            "tags": {
              "Name": "Terraform Allow 8080"
            },
            "tags_all": {
              "Name": "Terraform Allow 8080"
            },
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "842517499452",
            "id": "sgr-097f6e8a16486bd02",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.sg_allow_8080",
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_mysql_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:842517499452:security-group-rule/sgr-030671c8e8b9bcc63",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-030671c8e8b9bcc63",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0547bf6cad553301b",
            "region": "ap-south-1",
            "security_group_id": "sg-0577e2322ebefe63a",
            "security_group_rule_id": "sgr-030671c8e8b9bcc63",
            "tags": {
              "Name": "Allow MySQL DB - Terraform"
            },
            "tags_all": {
              "Name": "Allow MySQL DB - Terraform"
            },
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "842517499452",
            "id": "sgr-030671c8e8b9bcc63",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.rds_mysql_sg",
            "module.security_group.aws_security_group.sg_allow_ssh_http_https",
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ports",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:842517499452:security-group-rule/sgr-0289f3a0a279df973",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5000,
            "id": "sgr-0289f3a0a279df973",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0547bf6cad553301b",
            "security_group_rule_id": "sgr-0289f3a0a279df973",
            "tags": {
              "Name": "Terraform Test - Allow Ports to Connect"
            },
            "tags_all": {
              "Name": "Terraform Test - Allow Ports to Connect"
            },
            "to_port": 10000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "842517499452",
            "id": "sgr-0289f3a0a279df973",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.sg_allow_ssh_http_https",
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "tf_test_allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:842517499452:security-group-rule/sgr-0665c812c2f87640f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0665c812c2f87640f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0547bf6cad553301b",
            "security_group_rule_id": "sgr-0665c812c2f87640f",
            "tags": {
              "Name": "Terraform Test - Allow HTTP IPv4"
            },
            "tags_all": {
              "Name": "Terraform Test - Allow HTTP IPv4"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "842517499452",
            "id": "sgr-0665c812c2f87640f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.sg_allow_ssh_http_https",
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "tf_test_allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:842517499452:security-group-rule/sgr-0f72372c3de048f4c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0f72372c3de048f4c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0547bf6cad553301b",
            "security_group_rule_id": "sgr-0f72372c3de048f4c",
            "tags": {
              "Name": "Terraform Test - Allow HTTPS IPv4"
            },
            "tags_all": {
              "Name": "Terraform Test - Allow HTTPS IPv4"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "842517499452",
            "id": "sgr-0f72372c3de048f4c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.sg_allow_ssh_http_https",
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "tf_test_allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:842517499452:security-group-rule/sgr-07f1216b31dc149ea",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-07f1216b31dc149ea",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0547bf6cad553301b",
            "security_group_rule_id": "sgr-07f1216b31dc149ea",
            "tags": {
              "Name": "Terraform Test - Allow SSH IPv4"
            },
            "tags_all": {
              "Name": "Terraform Test - Allow SSH IPv4"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "842517499452",
            "id": "sgr-07f1216b31dc149ea",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.sg_allow_ssh_http_https",
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02b8269d5e85954ef",
            "arn": "arn:aws:ec2:ap-south-1:842517499452:instance/i-0b5074144c5ceed32",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-secrets-manager-profile",
            "id": "i-0b5074144c5ceed32",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Macbook-AWS",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-022af1261906dd131"
              }
            ],
            "primary_network_interface_id": "eni-022af1261906dd131",
            "private_dns": "ip-11-0-1-137.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.1.137",
            "public_ip": "13.233.206.7",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-068bfda897bad7deb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d145ef07e15cb0a5",
            "tags": {
              "Name": "Terraform Server 0"
            },
            "tags_all": {
              "Name": "Terraform Server 0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0547bf6cad553301b",
              "sg-079c2f48a155b5cb8"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "842517499452",
            "id": "i-0b5074144c5ceed32",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.iam_role.aws_iam_instance_profile.secrets_manager_profile",
            "module.iam_role.aws_iam_role.ec2_role",
            "module.security_group.aws_security_group.sg_allow_8080",
            "module.security_group.aws_security_group.sg_allow_ssh_http_https",
            "module.subnet.aws_subnet.public_subnet_1",
            "module.subnet.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.test_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02b8269d5e85954ef",
            "arn": "arn:aws:ec2:ap-south-1:842517499452:instance/i-007bbe61c7250b152",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-secrets-manager-profile",
            "id": "i-007bbe61c7250b152",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Macbook-AWS",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-095f8081e540539ee"
              }
            ],
            "primary_network_interface_id": "eni-095f8081e540539ee",
            "private_dns": "ip-11-0-2-85.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.2.85",
            "public_ip": "13.201.102.210",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0659adfee310f0a31",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0186da84f48ba4ee8",
            "tags": {
              "Name": "Terraform Server 1"
            },
            "tags_all": {
              "Name": "Terraform Server 1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0547bf6cad553301b",
              "sg-079c2f48a155b5cb8"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "842517499452",
            "id": "i-007bbe61c7250b152",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.iam_role.aws_iam_instance_profile.secrets_manager_profile",
            "module.iam_role.aws_iam_role.ec2_role",
            "module.security_group.aws_security_group.sg_allow_8080",
            "module.security_group.aws_security_group.sg_allow_ssh_http_https",
            "module.subnet.aws_subnet.public_subnet_1",
            "module.subnet.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:842517499452:subnet/subnet-0d145ef07e15cb0a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "11.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d145ef07e15cb0a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "842517499452",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Terraform Test1 Public Subnet"
            },
            "tags_all": {
              "Name": "Terraform Test1 Public Subnet"
            },
            "vpc_id": "vpc-03e18b90bf12adf87"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "842517499452",
            "id": "subnet-0d145ef07e15cb0a5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:842517499452:subnet/subnet-0186da84f48ba4ee8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "11.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0186da84f48ba4ee8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "842517499452",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Terraform Test2 Public Subnet"
            },
            "tags_all": {
              "Name": "Terraform Test2 Public Subnet"
            },
            "vpc_id": "vpc-03e18b90bf12adf87"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "842517499452",
            "id": "subnet-0186da84f48ba4ee8",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:842517499452:vpc/vpc-03e18b90bf12adf87",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-00328d28e64151473",
            "default_route_table_id": "rtb-0c9f4d44a2c466709",
            "default_security_group_id": "sg-00342f5dd768b47df",
            "dhcp_options_id": "dopt-048ba624833e445cc",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03e18b90bf12adf87",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c9f4d44a2c466709",
            "owner_id": "842517499452",
            "region": "ap-south-1",
            "tags": {
              "Name": "Terraform Test VPC"
            },
            "tags_all": {
              "Name": "Terraform Test VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "842517499452",
            "id": "vpc-03e18b90bf12adf87",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}